[tool.poetry]
name = "users-s"
version = "0.1.0"
description = ""
authors = ["kozlovmv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
