[tool.poetry]
name = "users-s"
version = "0.1.2"
description = ""
authors = ["kozlovmv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.1"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
